# LangChain-SearXNG

./: .gitignore  .gitmodules  Dockerfile  README-en.md  README.md  docker-compose.yml  pyproject.toml  settings.yaml
.github/ISSUE_TEMPLATE/: config.yml  question-report.md
docs/: config.md  docker.md  modevs.md  searxng-docker.md  searxngv1.md  systemd.md
langchain_searxng/: __init__.py  __main__.py  __version__.py  di.py  launcher.py  main.py  paths.py
langchain_searxng/components/embedding/: embedding_component.py
langchain_searxng/components/embedding/custom/zhipuai/: __init__.py  zhipuai_custom.py
langchain_searxng/components/llm/: llm_component.py
langchain_searxng/components/llm/custom/zhipuai/: __init__.py  zhipuai_custom.py  zhipuai_info.py
langchain_searxng/components/searxng/: searxng_component.py  searxng_custom.py  searxng_htmlloader.py  searxng_prompt.py
langchain_searxng/components/trace/: trace_component.py
langchain_searxng/server/config/: config_router.py
langchain_searxng/server/health/: health_router.py
langchain_searxng/server/search/: search_handler.py  search_prompt.py  search_router.py  search_service.py
langchain_searxng/server/utils/: auth.py  model.py
langchain_searxng/server/video/: video_router.py  video_service.py
langchain_searxng/settings/: settings.py  settings_loader.py  yaml.py
langchain_searxng/utils/: _compat.py
webui/: api.py  model.py  webui.py
